--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~10.0.0",
     "@popperjs/core": "^2.4.4",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
