--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.35",
     "@angular/animations": "^10.0.8",
     "@angular/cdk": "^10.1.2",
     "@angular/common": "~10.0.0",
